--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             color: #333;
         }
         .container {
-            max-width: 600px;
+            max-width: 800px;
             margin: 0 auto;
             background: #fff;
             padding: 20px;
@@ -24,22 +24,27 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         .calendar {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 10px;
         }
-        .session {
+        .day {
             padding: 15px;
             border: 1px solid #ddd;
             border-radius: 5px;
             background: #f9f9f9;
+            text-align: center;
         }
-        .session h2 {
-            margin: 0 0 10px;
-            font-size: 18px;
+        .day-header {
+            font-weight: bold;
+            margin-bottom: 10px;
         }
-        .session p {
-            margin: 5px 0;
+        .session {
+            margin-top: 10px;
+            cursor: pointer;
+        }
+        .session:hover {
+            background: #e9ecef;
         }
         button {
             padding: 10px 15px;
@@ -66,6 +71,22 @@
             color: red;
             font-size: 14px;
         }
+        .login-form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        .login-form input {
+            padding: 10px;
+            margin-bottom: 10px;
+            width: 100%;
+            max-width: 300px;
+        }
+        .login-form button {
+            width: 100%;
+            max-width: 300px;
+        }
     </style>
 </head>
 <body>
@@ -79,70 +100,97 @@
             <button onclick="logout()">Salir</button>
         </div>
 
-        <!-- Calendario de sesiones -->
-        <div class="calendar" id="calendar"></div>
-
-        <!-- Mensajes de error -->
-        <p class="error" id="error-message" style="display: none;"></p>
-
         <!-- Formulario de inicio de sesión -->
-        <div id="login-form" style="display: none;">
+        <div class="login-form" id="login-form" style="display: none;">
             <h2>Iniciar Sesión</h2>
             <input type="text" id="username" placeholder="Nombre de usuario" required>
             <button onclick="login()">Iniciar Sesión</button>
         </div>
 
+        <!-- Calendario semanal -->
+        <div id="calendar"></div>
+
+        <!-- Mensajes de error -->
+        <p class="error" id="error-message" style="display: none;"></p>
+
     </div>
 
     <script>
         // Datos simulados
-        const sessions = {
-            "mañana": { capacity: 20, reserved: [] },
-            "tarde": { capacity: 20, reserved: [] }
-        };
+        const sessions = {};
+        const MAX_CAPACITY = 20;
 
         let currentUser = null;
 
-        // Función para mostrar el calendario
-        function showCalendar() {
+        // Función para generar el calendario semanal
+        function generateCalendar() {
             const calendarDiv = document.getElementById('calendar');
             calendarDiv.innerHTML = ''; // Limpiar el contenido anterior
 
-            for (const [sessionName, sessionData] of Object.entries(sessions)) {
-                const sessionDiv = document.createElement('div');
-                sessionDiv.className = 'session';
+            const today = new Date();
+            const startOfWeek = new Date(today.setDate(today.getDate() - today.getDay())); // Lunes de la semana actual
+            const days = [];
 
-                const remaining = sessionData.capacity - sessionData.reserved.length;
+            for (let i = 0; i < 7; i++) {
+                const day = new Date(startOfWeek.getTime() + i * 24 * 60 * 60 * 1000);
+                days.push(day);
+            }
 
-                sessionDiv.innerHTML = `
-                    <h2>Sesión ${sessionName.charAt(0).toUpperCase() + sessionName.slice(1)}</h2>
-                    <p>Hora: ${sessionName === 'mañana' ? '9:30 AM' : '7:30 PM'}</p>
-                    <p>Plazas disponibles: ${remaining}</p>
-                `;
+            days.forEach(day => {
+                const dayDiv = document.createElement('div');
+                dayDiv.className = 'day';
 
-                if (!currentUser) {
-                    sessionDiv.innerHTML += '<p>Inicia sesión para reservar.</p>';
-                } else {
-                    const isReserved = sessionData.reserved.includes(currentUser);
+                const dateKey = `${day.toISOString().split('T')[0]}`; // Clave única para cada día
 
-                    if (isReserved) {
-                        const cancelBtn = document.createElement('button');
-                        cancelBtn.textContent = 'Cancelar Reserva';
-                        cancelBtn.className = 'cancel';
-                        cancelBtn.onclick = () => cancelReservation(sessionName);
-                        sessionDiv.appendChild(cancelBtn);
-                    } else if (remaining > 0) {
-                        const reserveBtn = document.createElement('button');
-                        reserveBtn.textContent = 'Reservar';
-                        reserveBtn.onclick = () => makeReservation(sessionName);
-                        sessionDiv.appendChild(reserveBtn);
-                    } else {
-                        sessionDiv.innerHTML += '<p>No hay plazas disponibles.</p>';
-                    }
+                if (!sessions[dateKey]) {
+                    sessions[dateKey] = {
+                        mañana: { capacity: MAX_CAPACITY, reserved: [] },
+                        tarde: { capacity: MAX_CAPACITY, reserved: [] }
+                    };
                 }
 
-                calendarDiv.appendChild(sessionDiv);
-            }
+                const dayHeader = document.createElement('div');
+                dayHeader.className = 'day-header';
+                dayHeader.textContent = `${day.toLocaleDateString('es-ES', { weekday: 'long' })}, ${day.getDate()}/${day.getMonth() + 1}`;
+                dayDiv.appendChild(dayHeader);
+
+                const sessionKeys = ['mañana', 'tarde'];
+                sessionKeys.forEach(sessionKey => {
+                    const sessionDiv = document.createElement('div');
+                    sessionDiv.className = 'session';
+                    const remaining = sessions[dateKey][sessionKey].capacity - sessions[dateKey][sessionKey].reserved.length;
+
+                    sessionDiv.innerHTML = `
+                        <p>${sessionKey === 'mañana' ? 'Mañana (9:30 AM)' : 'Tarde (7:30 PM)'}</p>
+                        <p>Plazas disponibles: ${remaining}</p>
+                    `;
+
+                    if (!currentUser) {
+                        sessionDiv.innerHTML += '<p>Inicia sesión para reservar.</p>';
+                    } else {
+                        const isReserved = sessions[dateKey][sessionKey].reserved.includes(currentUser);
+
+                        if (isReserved) {
+                            const cancelBtn = document.createElement('button');
+                            cancelBtn.textContent = 'Cancelar Reserva';
+                            cancelBtn.className = 'cancel';
+                            cancelBtn.onclick = () => cancelReservation(dateKey, sessionKey);
+                            sessionDiv.appendChild(cancelBtn);
+                        } else if (remaining > 0) {
+                            const reserveBtn = document.createElement('button');
+                            reserveBtn.textContent = 'Reservar';
+                            reserveBtn.onclick = () => makeReservation(dateKey, sessionKey);
+                            sessionDiv.appendChild(reserveBtn);
+                        } else {
+                            sessionDiv.innerHTML += '<p>No hay plazas disponibles.</p>';
+                        }
+                    }
+
+                    dayDiv.appendChild(sessionDiv);
+                });
+
+                calendarDiv.appendChild(dayDiv);
+            });
         }
 
         // Función para iniciar sesión
@@ -152,7 +200,7 @@
                 currentUser = username;
                 document.getElementById('user-name').textContent = `Usuario: ${currentUser}`;
                 document.getElementById('login-form').style.display = 'none';
-                showCalendar();
+                generateCalendar();
             } else {
                 showError('Por favor, ingresa un nombre de usuario.');
             }
@@ -163,36 +211,36 @@
             currentUser = null;
             document.getElementById('user-name').textContent = 'Usuario: Invitado';
             document.getElementById('login-form').style.display = 'block';
-            showCalendar();
+            generateCalendar();
         }
 
         // Función para hacer una reserva
-        function makeReservation(sessionName) {
+        function makeReservation(dateKey, sessionKey) {
             if (!currentUser) {
                 showError('Debes iniciar sesión para reservar.');
                 return;
             }
 
-            const session = sessions[sessionName];
+            const session = sessions[dateKey][sessionKey];
             if (session.reserved.includes(currentUser)) {
                 showError('Ya has reservado esta sesión.');
             } else if (session.reserved.length < session.capacity) {
                 session.reserved.push(currentUser);
-                showSuccessMessage(`¡Reserva realizada para la sesión ${sessionName}!`);
-                showCalendar();
+                showSuccessMessage(`¡Reserva realizada para la sesión ${sessionKey} el ${dateKey}!`);
+                generateCalendar();
             } else {
                 showError('No hay plazas disponibles.');
             }
         }
 
         // Función para cancelar una reserva
-        function cancelReservation(sessionName) {
-            const session = sessions[sessionName];
+        function cancelReservation(dateKey, sessionKey) {
+            const session = sessions[dateKey][sessionKey];
             const index = session.reserved.indexOf(currentUser);
             if (index !== -1) {
                 session.reserved.splice(index, 1);
-                showSuccessMessage(`¡Reserva cancelada para la sesión ${sessionName}!`);
-                showCalendar();
+                showSuccessMessage(`¡Reserva cancelada para la sesión ${sessionKey} el ${dateKey}!`);
+                generateCalendar();
             } else {
                 showError('No tienes una reserva activa para esta sesión.');
             }
@@ -211,7 +259,7 @@
         }
 
         // Inicialización
-        showCalendar();
+        generateCalendar();
     </script>
 
 </body>
