--- a/index.html
+++ b/index.html
@@ -50,23 +50,37 @@
             margin-bottom: 10px;
             color: #555;
         }
-        .session {
+        .session-info {
             margin-top: 10px;
-            cursor: pointer;
-            padding: 5px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background: #fff;
+            text-align: left;
+        }
+        .session-info p {
+            margin: 5px 0;
+            font-size: 14px;
+        }
+        .session-info .action-button {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 5px 10px;
+            border: none;
             border-radius: 5px;
             background: #007BFF;
             color: white;
+            cursor: pointer;
             font-size: 14px;
             transition: background 0.3s ease;
         }
-        .session:hover {
+        .session-info .action-button:hover {
             background: #0056b3;
         }
-        .session.cancelled {
+        .session-info .action-button.cancelled {
             background: #dc3545;
         }
-        .session.cancelled:hover {
+        .session-info .action-button.cancelled:hover {
             background: #a71d2a;
         }
         .login-form {
@@ -169,32 +183,36 @@
 
                 const sessionKeys = ['mañana', 'tarde'];
                 sessionKeys.forEach(sessionKey => {
-                    const sessionDiv = document.createElement('div');
-                    sessionDiv.className = 'session';
+                    const sessionInfoDiv = document.createElement('div');
+                    sessionInfoDiv.className = 'session-info';
 
                     const remaining = sessions[dateKey][sessionKey].capacity - sessions[dateKey][sessionKey].reserved.length;
 
-                    sessionDiv.innerHTML = `
-                        <p>${sessionKey === 'mañana' ? 'Mañana (9:30 AM)' : 'Tarde (7:30 PM)'}</p>
-                        <p>Plazas disponibles: ${remaining}</p>
+                    sessionInfoDiv.innerHTML = `
+                        <p><strong>Sesión:</strong> ${sessionKey === 'mañana' ? 'Mañana (9:30 AM)' : 'Tarde (7:30 PM)'}</p>
+                        <p><strong>Día:</strong> ${day.toLocaleDateString('es-ES', { weekday: 'long' })}, ${day.getDate()}/${day.getMonth() + 1}</p>
+                        <p><strong>Plazas disponibles:</strong> ${remaining}</p>
                     `;
 
                     const isReserved = sessions[dateKey][sessionKey].reserved.includes(currentUser);
 
                     if (isReserved) {
-                        sessionDiv.classList.add('cancelled');
-                        sessionDiv.onclick = () => cancelReservation(dateKey, sessionKey);
-                        sessionDiv.textContent = 'Cancelar Reserva';
+                        const cancelBtn = document.createElement('button');
+                        cancelBtn.className = 'action-button cancelled';
+                        cancelBtn.textContent = 'Cancelar Reserva';
+                        cancelBtn.onclick = () => cancelReservation(dateKey, sessionKey);
+                        sessionInfoDiv.appendChild(cancelBtn);
                     } else if (remaining > 0) {
-                        sessionDiv.onclick = () => makeReservation(dateKey, sessionKey);
-                        sessionDiv.textContent = 'Reservar';
+                        const reserveBtn = document.createElement('button');
+                        reserveBtn.className = 'action-button';
+                        reserveBtn.textContent = 'Reservar';
+                        reserveBtn.onclick = () => makeReservation(dateKey, sessionKey);
+                        sessionInfoDiv.appendChild(reserveBtn);
                     } else {
-                        sessionDiv.style.opacity = '0.5';
-                        sessionDiv.style.pointerEvents = 'none';
-                        sessionDiv.textContent = 'Sin plazas';
+                        sessionInfoDiv.innerHTML += '<p style="color: red;">No hay plazas disponibles.</p>';
                     }
 
-                    dayDiv.appendChild(sessionDiv);
+                    dayDiv.appendChild(sessionInfoDiv);
                 });
 
                 calendarDiv.appendChild(dayDiv);
